--- a/frontend/src/react/_global/defaults/defaults.scss
+++ b/frontend/src/react/_global/defaults/defaults.scss
@@ -1,3 +1,5 @@
+@import "form";
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -55,8 +57,4 @@ a {
 
 .error {
   color: #c14838;
-}
-
-.hr {
-
 }
